tests/baselines/reference/noTypeArgumentOnReturnType1.errors.txt
==== tests/cases/compiler/noTypeArgumentOnReturnType1.ts (1 errors) ====
    class A<T>{
     
     foo(): A{
            ~
!!! noTypeArgumentOnReturnType1.ts(3,9): error TS2090: Generic type 'A<T>' requires 1 type argument(s).
      return null;
     }
    }